# chat-agent-prefect

./: .env.example  CLAUDE.md  README.md  docker-compose.yml  main.py  pyproject.toml  test_chat.py  test_pause_resume.py
backend/: .dockerignore  Dockerfile
backend/app/: flows_pause_resume.py  main.py  main_final.py  main_pause_resume.py  main_simple.py
backend/app/agents/: simple_agent.py
backend/app/api/: chat.py  health.py
backend/app/flows/: __init__.py  chat_flow.py  chat_session_flow.py
frontend/: .dockerignore  Dockerfile  next.config.js  package.json
frontend/app/: layout.tsx  page.tsx  simple-chat.tsx
